# nasa-cfs-esp-freertos

./: .gitignore  .gitmodules  NOTES.md  README.md
cfs-driven/: README.md
cfs-driven/esp-idf-config/: sdkconfig  sdkconfig.old
cfs-driven/mission-defs/: arch_build_custom.cmake  global_build_options.cmake  targets.cmake  toolchain-xtensa-esp32s3-espidf.cmake
esp-idf-freertos-smp-example/: sdkconfig
esp-idf-freertos-smp-example/.cache/clangd/index/: basic_freertos_smp_usage.c.BC10EFF018BE7E18.idx  basic_freertos_smp_usage.h.350A13337CD53182.idx  batch_processing_example.c.4731457D1A1E1B51.idx  create_task_example.c.55371DF2AC1EAD75.idx  lock_example.c.B70E76EAB4663587.idx  queue_example.c.DC09257F67DD66B5.idx  task_notify_example.c.76AA4CE46EAFCB43.idx
esp-idf-hello-world/: sdkconfig  sdkconfig.old
esp-idf-hello-world/components/cfs/: CMakeLists.txt
esp-idf-hello-world/components/cfs/include/: cfe_core_api_base_msgid_values.h  cfe_core_api_interface_cfg_values.h  cfe_core_api_msgid_mapping.h  cfe_core_private_internal_cfg.h  cfe_es_extern_typedefs.h  cfe_es_fcncode_values.h  cfe_es_interface_cfg_values.h  cfe_es_internal_cfg_values.h  cfe_es_memaddress.h  cfe_es_mission_cfg.h  cfe_es_msg.h  cfe_es_msgdefs.h  cfe_es_msgid_values.h  cfe_es_msgids.h  cfe_es_msgstruct.h  cfe_es_platform_cfg.h  cfe_es_topicid_values.h  cfe_evs_extern_typedefs.h  cfe_evs_fcncode_values.h  cfe_evs_interface_cfg_values.h  cfe_evs_internal_cfg_values.h  cfe_evs_mission_cfg.h  cfe_evs_msg.h  cfe_evs_msgdefs.h  cfe_evs_msgid_values.h  cfe_evs_msgids.h  cfe_evs_msgstruct.h  cfe_evs_platform_cfg.h  cfe_evs_topicid_values.h  cfe_fs_extern_typedefs.h  cfe_fs_filedef.h  cfe_fs_interface_cfg_values.h  cfe_fs_mission_cfg.h  cfe_mission_cfg.h  cfe_msg_hdr.h  cfe_msg_sechdr.h  cfe_msgids.h  cfe_platform_cfg.h  cfe_resourceid_typedef.h  cfe_sb_extern_typedefs.h  (+43 more)
esp-idf-hello-world/components/cfs/src/: mission_tables.c
esp-idf-hello-world/main/: CMakeLists.txt  hello_world_main.c
esp-idf-hello-world/scripts/: defaults.sh
